fix overflow issue

--- a/src/components/MainContent/index.css
+++ b/src/components/MainContent/index.css
@@ -15,7 +15,7 @@
   width: auto;
   padding-left: 150px;
   padding-right: 150px;
-  min-width: max-content;
+  min-width: fit-content;
 }
 
 @keyframes unblur {
